objects/Instruction__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article for only internal usage of ABB</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Report_with_Linked_Cases__c</fullName>
        <description>SFDC-3198 Cases Linked in Articles</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; $Label.Report_URL_Id &amp; &quot;?pv0=&quot; &amp; Id , &quot;Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Report showing details of all Cases linked to this Article</inlineHelpText>
        <label>Report with Linked Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_ArticleProductsNames__c</fullName>
        <description>STS PR 2.0 - field for showing products added to the article.</description>
        <inlineHelpText>This fields shows Product or Products that are associated with this Article. A maximum of 255 characters can be shown in this field.</inlineHelpText>
        <label>Article Product Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STS_ArticleProducts__c</fullName>
        <description>STS PR 2.0 - field for adding and editing products to an article.</description>
        <formula>IF( ISPICKVAL(PublishStatus, &apos;Draft&apos;) || ISPICKVAL(PublishStatus, &apos;Online&apos;), HYPERLINK(&quot;/apex/STS_ProductTreeSelectionPage?addTo=&quot;+Id+&quot;&amp;id=&quot;+Id+&quot;&amp;retURL=&quot;+Id, $Label.STS_Add, &apos;_self&apos;) &amp;&apos; &apos;&amp; HYPERLINK(&quot;/apex/STS_ProdViaPage?id=&quot;+Id, $Label.STS_Edit, &apos;_self&apos;), $Label.STS_ArchivedArticleMessage)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click Add if you want add one or more Products, click Edit if you want to modify one or more Products.</inlineHelpText>
        <label>Article Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Sent_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Sent for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Instruction</label>
    <pluralLabel>Instruction</pluralLabel>
</CustomObject>